<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:id="@+id/pictureInfoJourney"
                    android:src="@drawable/sample"
                    android:contentDescription="@string/journeyPictureDescription"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/nameInfoJourney"
                        tools:text="Name of the Journey"
                        android:layout_marginBottom="8dp"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/searchFrom"
                            android:textStyle="bold"
                            android:layout_marginRight="8dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/fromInfoJourney"
                            tools:text="01.01.1990"
                            android:layout_marginRight="16dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/searchTo"
                            android:textStyle="bold"
                            android:layout_marginRight="8dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/toInfoJourney"
                            tools:text="01.01.1990"/>

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/journeySampleDescription" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="16dp"
                    android:paddingRight="16dp"
                    android:paddingLeft="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/nameJourney"
                        android:text="@string/journeyPriceDetails"
                        android:layout_marginBottom="16dp"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/textAdult"
                                android:text="@string/journeyAdultsNumber"
                                android:paddingRight="8dp"/>
                            <requestFocus />

                            <SeekBar
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/seekBarAdults"
                                android:layout_weight="1"
                                android:max="3"/>
                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/textKids"
                                android:text="@string/journeyKidsNumber"
                                android:paddingRight="8dp" />
                            <requestFocus />

                            <SeekBar
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/seekBarKids"
                                android:layout_weight="1"
                                android:max="4"/>
                        </TableRow>
                    </TableLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="16dp"
                    android:paddingRight="16dp"
                    android:paddingLeft="16dp">

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/journeyFlightPrice"
                                android:paddingRight="8dp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                tools:text="$ 321,03"
                                android:id="@+id/textInfoFlightPrice"
                                android:layout_weight="1"
                                android:gravity="right"
                                android:paddingRight="8dp" />
                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/journeyHotelPrice"
                                android:paddingRight="8dp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                tools:text="$ 749,07"
                                android:id="@+id/textInfoHotelPrice"
                                android:layout_weight="1"
                                android:gravity="right"
                                android:paddingRight="8dp" />
                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/journeyTaxesFees"
                                android:paddingRight="8dp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                tools:text="$ 29,90"
                                android:id="@+id/textInfoTaxes"
                                android:layout_weight="1"
                                android:gravity="right"
                                android:paddingRight="8dp" />
                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/journeyTotalPrice"
                                android:textStyle="bold"
                                android:paddingRight="8dp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                tools:text="$ 1100,00"
                                android:id="@+id/textInfoPrice"
                                android:layout_weight="1"
                                android:gravity="right"
                                android:textStyle="bold"
                                android:paddingRight="8dp" />
                        </TableRow>
                    </TableLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:layout_gravity="start"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/journeyButtonBook"
                        android:id="@+id/buttonInfoBook"
                        style="?android:attr/borderlessButtonStyle"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:id="@+id/textLoginToBook"
                        android:visibility="gone"
                        android:text="Please login to book!"/>

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>